<resources>
    <string name="app_name">Kevin Cox - TD Challenge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Obi Wan Kenobi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="track_purchase">Track A Purchase</string>
    <string name="find_in_my_budget">Budget Based Search</string>
    <string name="explore">Explore Businesses Near Me</string>
    <string name="budgeting_tools">Budgeting Tools</string>

    <string name="address_found">Address Found</string>
    <string name="no_address_found">Address Not Found</string>
    <string name="invalid_lat_long_used">Invalid Lat Long Provided</string>
    <string name="service_not_available">Service Not Available</string>


    <string name="about">About</string>
    <string name="about_challenge_title">TD Challenge 2019</string>
    <string name="about_info">This application was developed as part of the 2019 Fanshawe College TD Challenge.</string>
    <string name="about_add_info">This application uses consolidated data scraped from the TD Endpoint to provide business locations and financial data.</string>
    <string name="about_credit">Kevin Cox</string>

    <string name="distance_title">Distance:</string>
    <string name="business_types">Business Type:</string>
    <string name="spending_value">Budgeted Amount:</string>
    <string-array name="business_types">
        <item>Shopping</item>
        <item>Food and Dining</item>
        <item>Auto and Transport</item>
        <item>Health and Fitness</item>
        <item>Home</item>
        <item>Entertainment</item>
    </string-array>
    <string-array name="distance_values">
        <item>1 km</item>
        <item>3 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>25 km</item>
    </string-array>

    <string name="search_in_my_budget">Search In My Budget</string>
    <string name="page_number">Page</string>

    <string name="verify_value">Record This Amount?</string>
    <string name="amount">Amount:</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="average_cost_of">Average Cost Of $</string>
    <string name="km_from_you">km from you</string>
    <string name="purchase_location_hint">Merchant Name</string>
    <string name="nearby_businesses">Nearby Businesses:</string>
    <string name="choose_image_location">Choose Image Location</string>
    <string name="bad_image_path">Bad Image Path</string>
</resources>
