<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
    </group>


    <item android:title="@string/budgeting_tools">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/track_purchase"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/track_purchase" />
            <item
                android:id="@+id/find_in_my_budget"
                android:icon="@drawable/search"
                android:title="@string/find_in_my_budget" />
            <item
                android:id="@+id/explore"
                android:icon="@drawable/explore"
                android:title="@string/explore" />
            </group>
        </menu>
    </item>

    <item android:title="@string/about">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/about"
                    android:icon="@drawable/about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>



</menu>
